some html formatting

--- a/core/templates/core/project-details.html
+++ b/core/templates/core/project-details.html
@@ -1,3 +1,11 @@
-{{ project }} <br>
-
-<a href="{% url 'core:index' %}"> < back to projects </a>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title> {{ project }} </title>
+    </head>
+    <body>
+        {{ project }} <br>
+        <a href="{% url 'core:index' %}"> < back to projects </a>
+    </body>
+</html>
