--- a/core/templates/core/user_profile.html
+++ b/core/templates/core/user_profile.html
@@ -6,5 +6,19 @@
     </head>
     <body>
         <p> profile of user {{ username }} </p>
+        {% if project_list %}
+            <p> projects by {{ username }} </p>
+            <ul>
+                {% for project in project_list %}
+                    <li>
+                        <a href="{% url 'core:project_details' project.id %}">
+                        {{ project.descriptor }}
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p>User has no projects</p>
+        {% endif %}
     </body>
 </html>
